--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>React Calendar</title>
-    <meta name="description" content="My personal Calendar lib created with React">
+    <meta name="description" content="My personal Calendar component created with React">
   </head>
   <body>
     <div id="root"></div>
